Copyright Update to 2019
Wow I haven’t updated the date on my website in 3 years. How
~embarrassing~

--- a/hashman.html
+++ b/hashman.html
@@ -5,7 +5,7 @@
 	<title>Victoria Yuen-Ruan &mdash; Hashman Infused</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="Santa Cruz, CA based Designer & Illustrator experienced in visual communication, illustration, branding, and UI|UX. Available for any design and illustration service requests.">
+	<meta name="description" content="Santa Cruz, CA based Designer & Illustrator experienced in visual communication, illustration, branding, and UI|UX. Available for design and illustration projects and collaboration.">
 	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Bay Area, Visual Designer, Illustration, Graphics, Santa Cruz">
 	
 	<link rel="shortcut icon" href="favicon.png">
@@ -164,7 +164,7 @@
 				<!--<p>
 					<a href="index.html" class="mini-logo"><img src="img/logo-footer.png" width="90" height="33" alt="Exa"></a>
 				</p> -->
-				<p>&copy; 2016 Victoria Yuen-Ruan. All Rights Reserved.</p>
+				<p>&copy; 2019 Victoria Yuen-Ruan. All Rights Reserved.</p>
 				<p>
 					<a href="https://thellamawentmeow.tumblr.com" class="social-link"><i class="fa fa-tumblr"></i></a>
 					<a href="https://twitter.com/yuenruan" class="social-link"><i class="fa fa-twitter"></i></a>
