--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Victoria Yuen-Ruan &ndash; Designer &amp; Illustrator</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta name="description" content="Santa Cruz, CA based Designer & Illustrator experienced in visual communication, illustration, branding, and UI|UX. Available for any design and illustration service requests.">
+	<meta name="description" content="Santa Cruz, CA based Designer & Illustrator experienced in visual communication, illustration, branding, and UI|UX. Available for design and illustration projects and collaboration.">
 	<meta name="keywords" content="Victoria Yuen-Ruan, Design, Portfolio, Bay Area, Visual Designer, Illustration, Graphics, Santa Cruz">
 
 	<link rel="shortcut icon" href="favicon.png">
@@ -65,9 +65,9 @@
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="gubi.html">
-									<img src="img/gubi_hero.jpg" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Gubi</strong><span class="excerpt">Branding | Product Design </span><em class="arrow-right"></em></span>
+								<a href="1440dinner.html">
+									<img src="img/1440dinner_hero.png" alt="" width="434" height="434">
+									<span class="info"><strong class="title">1440 Multiversity Private Event</strong><span class="excerpt">Menu | Photography </span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -75,9 +75,9 @@
 					<div class="box col-xs-6 col-sm-4 col-md-3">
 						<div class="thumb">
 							<div class="photo">
-								<a href="biodiversity.html">
-									<img src="img/biodiversity_hero.png" alt="" width="434" height="434">
-									<span class="info"><strong class="title">Biodiversity Museum Day</strong><span class="excerpt">Marketing</span><em class="arrow-right"></em></span>
+								<a href="gubi.html">
+									<img src="img/gubi_hero.jpg" alt="" width="434" height="434">
+									<span class="info"><strong class="title">Gubi</strong><span class="excerpt">Branding | Product Design </span><em class="arrow-right"></em></span>
 								</a>
 							</div>
 						</div>
@@ -157,7 +157,7 @@
 				<!--<p>
 					<a href="index.html" class="mini-logo"><img src="img/logo-footer.png" width="90" height="33" alt="Exa"></a>
 				</p> -->
-				<p>&copy; 2016 Victoria Yuen-Ruan. All Rights Reserved.</p>
+				<p>&copy; 2019 Victoria Yuen-Ruan. All Rights Reserved.</p>
 				<p>
 					<a href="https://thellamawentmeow.tumblr.com" class="social-link"><i class="fa fa-tumblr"></i></a>
 					<a href="https://twitter.com/yuenruan" class="social-link"><i class="fa fa-twitter"></i></a>
