--- a/1440dinner.html
+++ b/1440dinner.html
@@ -51,10 +51,10 @@
 		<div class="container">
 			<h2 class="single-title">Private Dinner Menu & Photography</h2>
 			<div class="owl-carousel owl-slider">
-				<img src="img/1440dinner-1.jpg" width="1240" height="698" alt="Private Dinner Tabletop with menu">
-				<img src="img/1440dinner-2.jpg" width="1240" height="698" alt="Private Dinner setup with view of scarves">
-				<img src="img/1440dinner-3.jpg" width="1240" height="698" alt="Private Dinner setup with larger view">
-				<img src="img/1440dinner-4.jpg" width="1240" height="698" alt="Private Dinner setup from a different angle">
+				<img src="img/1440Dinner1.jpg" width="1240" height="698" alt="Private Dinner Tabletop with menu">
+				<img src="img/1440Dinner2.jpg" width="1240" height="698" alt="Private Dinner setup with view of scarves">
+				<img src="img/1440Dinner3.jpg" width="1240" height="698" alt="Private Dinner setup with larger view">
+				<img src="img/1440Dinner4.jpg" width="1240" height="698" alt="Private Dinner setup from a different angle">
 				
 				
 			</div>
